--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -103,6 +103,7 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/Maps/SurfTest")
++MapsToCook=(FilePath="/Game/Maps/Level1")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
