--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -66,7 +66,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/Maps/SurfTest.SurfTest
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/RootSurfer.RootSurferGameMode
 GlobalDefaultServerGameMode=None
